--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -1,124 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/gridview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnWidth="200dp"
-    android:gravity="center"
-    android:horizontalSpacing="10dp"
-    android:numColumns="2"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="10dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/notification_pref"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+    <GridLayout
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:id="@+id/gridview"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:columnWidth="200dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:rowCount="5"
+        android:stretchMode="none"
+        android:verticalSpacing="10dp">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/notification_pref"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- Media -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="194dp"
-                android:contentDescription="test"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/notification_bar" />
+            android:layout_margin="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
-                <!-- Title, secondary and supporting text -->
-                <TextView
-                    android:layout_width="wrap_content"
+                <!-- Media -->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="194dp"
+                    android:contentDescription="test"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/notification_bar" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Notification Shade"
-                    android:textAppearance="?attr/textAppearanceTitleMedium" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <!-- Title, secondary and supporting text -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Notification Shade"
+                        android:textAppearance="?attr/textAppearanceTitleMedium" />
 
 
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card2"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card2"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- Media -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="194dp"
-                android:contentDescription="test"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/notifcation_bar" />
+            android:layout_margin="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
-                <!-- Title, secondary and supporting text -->
-                <TextView
-                    android:layout_width="wrap_content"
+                <!-- Media -->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="194dp"
+                    android:contentDescription="test"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/notifcation_bar" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Notification Shade"
-                    android:textAppearance="?attr/textAppearanceTitleMedium" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <!-- Title, secondary and supporting text -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Notification Shade"
+                        android:textAppearance="?attr/textAppearanceTitleMedium" />
 
 
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card3"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card3"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- Media -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="194dp"
-                android:contentDescription="test"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/icon_shapes" />
+            android:layout_margin="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
-                <!-- Title, secondary and supporting text -->
-                <TextView
-                    android:layout_width="wrap_content"
+                <!-- Media -->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="194dp"
+                    android:contentDescription="test"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/icon_shapes" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Icon Shape"
-                    android:textAppearance="?attr/textAppearanceTitleMedium" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <!-- Title, secondary and supporting text -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Icon Shape"
+                        android:textAppearance="?attr/textAppearanceTitleMedium" />
 
 
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-</GridLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </GridLayout>
+</FrameLayout>
